--- a/public/messages.html
+++ b/public/messages.html
@@ -1,7 +1,12 @@
 <h3>Messages</h3>
 <ul id="messages">
     <li ng-repeat="m in messages">
-        <b>{{m.sender_screen_name}}</b><br>
-        <p>{{ m.text }}</p>
+        <div id="message-left">
+            <img class="profile_pic" ng-src="{{ m.sender.profile_image_url }}" />    
+        </div>
+        <div id="message-right">
+            <b>{{m.sender_screen_name}}</b><br>
+            <p>{{ m.text }}</p>            
+        </div>
     </li>
 </ul>
